# PocketTellerMachine2

./: .gitignore  .replit  .replit_refresh_marker  DropAutoEvolverBuilder.py  DropGhostMindLiveTrader.py  GhostDNA.json  GhostVoids.ctrl.json  PTMHealth.json  __init__.py  adaptive_recon_launcher.py  agent_command_executor.py  ai_alliance_task_weaver.py  ai_alliance_uplink.py  ai_claude.py  ai_code_generator.py  ai_coder_engine.py  ai_command_router.py  ai_commander.py  ai_directive_compiler.py  ai_file_listener_writer.py  ai_file_uploader.py  ai_harmony_configurator.py  ai_hub_conference.py  ai_idle_monitor.py  ai_memory.json  ai_memory_linker.py  ai_memory_trainer.py  ai_openai.py  ai_perplexity.py  ai_persona_register.py  ai_propaganda_orchestrator.py  ai_recon_route.py  ai_registry.py  ai_router_controller.py  ai_shell.py  ai_sync_bridge.py  ai_tensorflow.py  ai_tool_extractor.py  ai_trade_stack_optimizer.py  ai_wolfram.py  (+2166 more)
aassistants/: voice_trigger.py
agents/: bridge_drop_agent.py  bridge_pickup_agent.py  bridge_team_launcher.py
assistant/: spectra.py
assistants/: chill_trader.py  comedian.py  council_protocol.py  drill_instructor.py  generate_test_voice.py  malik.py  mentor.py  mo_cash.py  og.py  optimist.py  persona_router.py  shadow.py  strategist.py
auto_uploaded_code/: "ptm_should_initiate_at_least_one_trade_in_order_to_evaluate_performance".py  "strategies_need_to_be_implemented_and_activated_for_trading".py  "strive_to_diversify_and_test_various_trading_strategies_to_identify_potential_successes".py  (+588 more)
botnet/: autonomy_router.py  bridge_config.json  (+6 more)
(+5601 files in other folders)
