
[tool.poetry]
name = "ptm-trading-bot"
version = "0.1.0"
description = ""
authors = ["PTM Trading Bot"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^5.0.1"
elevenlabs = "^1.57.0"
psutil = "^7.0.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"
yfinance = "^0.2.35"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
